# Codeoba-Tauri

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: build-desktop.yml
docs/: APP_SIGNING.md  tokenization_calibration.md
packaging/: com.whataicando.codeoba.yaml
scripts/: bump-version.cjs  merge-updater-manifests.cjs  patch-tract-linalg.cjs  prepare-installers.cjs  prepare-nsis.cjs  rpm-sign.exp  sandbox.md  sandbox.py  sync-version.cjs  translate.cjs
src/: App.tsx  window-init.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  watcher.rs
src-tauri/src/parsers/: aider.rs  antigravity.rs  cache.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  tests.rs
src-tauri/src/search/: downloader.rs  mod.rs  semantic.rs  tokenizer.rs
src/components/: Dashboard.tsx  DetailPane.tsx  SettingsDialog.tsx  Sidebar.tsx
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  zh-TW.json  zh.json
src/utils/: format.ts
